--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,94 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Online restaurant</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Bangkok Express by Sofi Bel" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#209cee">
+    <meta name="msapplication-TileColor" content="#209cee">
+    <meta name="theme-color" content="#209cee">
+    <meta name="author" content="Sofi Bel" />
+    <title>Bangkok Express</title>
+
+    <script type="module">
+      import Main from "./index.js";
+
+      let main = new Main();
+
+      main.render().then(() => console.log("Страница готова!"));
+    </script>
   </head>
+
   <body>
-    <div id="app"></div>
-    <script type="module" src="index.jsx"></script>
+    <header class="header container">
+      <h1 class="heading logo">Bangkok Express</h1>
+      <h3 class="subheading">Great food・Free delivery・Fair price</h3>
+
+      <div data-cart-icon-holder></div>
+    </header>
+
+    <main>
+      <div class="container" data-carousel-holder></div>
+
+      <div class="container">
+        <h2 class="section-heading">Our Menu</h2>
+        <div data-ribbon-holder></div>
+      </div>
+
+      <div class="container">
+        <div class="filters">
+          <div class="filters__inner">
+            <div class="filters__group">
+              <label class="filters__label">Max spiciness</label>
+              <div class="filters__slider" data-slider-holder></div>
+            </div>
+            <div class="filters__group">
+              <div class="filters__checkbox">
+                <input
+                  class="styled-checkbox"
+                  id="nuts-checkbox"
+                  type="checkbox"
+                  value="1"
+                />
+                <label for="nuts-checkbox">
+                  <span class="filters__label">No nuts</span>
+                </label>
+              </div>
+            </div>
+            <div class="filters__group">
+              <div class="filters__checkbox">
+                <input
+                  class="styled-checkbox"
+                  id="vegeterian-checkbox"
+                  type="checkbox"
+                  value="1"
+                />
+                <label for="vegeterian-checkbox">
+                  <span class="filters__label">Vegeterian only</span>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container" data-products-grid-holder>
+        <div class="products-grid is-loading">
+          <div class="products-grid__skeleton">
+            <div class="products-grid__skeleton-item"></div>
+            <div class="products-grid__skeleton-item"></div>
+            <div class="products-grid__skeleton-item"></div>
+            <div class="products-grid__skeleton-item"></div>
+            <div class="products-grid__skeleton-item"></div>
+            <div class="products-grid__skeleton-item"></div>
+          </div>
+          <div class="products-grid__inner"></div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
