--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Bangkok Express by Sofi Bel" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#209cee">
-    <meta name="msapplication-TileColor" content="#209cee">
-    <meta name="theme-color" content="#209cee">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#209cee" />
+    <meta name="msapplication-TileColor" content="#209cee" />
+    <meta name="theme-color" content="#209cee" />
     <meta name="author" content="Sofi Bel" />
     <title>Bangkok Express</title>
 
-    <script type="module">
-      import Main from "./index.js";
-
-      let main = new Main();
-
-      main.render().then(() => console.log("Страница готова!"));
-    </script>
+    <script type="module" src="index.js"></script>
   </head>
 
   <body>
