--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     <meta name="theme-color" content="#209cee" />
     <meta name="author" content="Sofi Bel" />
     <title>Bangkok Express</title>
-
-    <script type="module" src="index.js"></script>
+    <link rel="stylesheet" href="./assets/styles/common.scss" />
+    <link rel="stylesheet" href="./assets/styles/all.scss" />
   </head>
 
   <body>
@@ -84,5 +84,6 @@
         </div>
       </div>
     </main>
+    <script type="module" src="/index.js"></script>
   </body>
 </html>
