--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,12 @@
         </div>
       </div>
     </main>
-    <script type="module" src="/index.js"></script>
+    <footer class="footer container">
+      <p class="footer__copyright">&copy; 2024
+        <a class="footer__author-link" href="https://www.linkedin.com/in/sofi-bel/"
+           target="_blank" rel="noopener noreferrer">Sofi Bel</a>
+      </p>
+    </footer>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
